test/tests/compiler/18_structures/invalid_parse/struct_member_no_semicolon.plx
type struc s (
    a: i32;  # structure member declaration must end with a semicolon
)

pub fn main(none) i32 {
    return 0
}
